Fix submit answer not always being right aligned

--- a/hunt_data/common.css
+++ b/hunt_data/common.css
@@ -43,7 +43,6 @@ table.mh-center {
         position: relative;
     }
     .mh-fancy #mh-controls {
-	width: 900px;
 	padding-bottom: 5px;
 	overflow: hidden;
     }
